[package]
name = "dam-ramulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ramulator_wrapper = "0.2.6"
tempfile = "3.8.0"
dam = {version = "0.1.0", git = "https://github.com/stanford-ppl/DAM-RS.git", default-features = false, branch="dev"}
fxhash = "0.2.1"
derive_more = "0.99.17"
num-bigint = "0.4.4"
enum_dispatch = "0.3.12"

[profile.dev.build-override]
debug = 2
